--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Jace Energy</title>
+        <meta name="viewport" content="initial-scale=1, maximum-scale=1">
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/styles.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -31,11 +32,9 @@
         <div id="display-header"></div>
         <div class="hero-text">
             <h2> Jace Energy  </h2>
-            <br>
-            <hr>
             <p>Non-Destructive Testing</p>
         </div>
-        <div class='content-first'>
+        <div class='content-first slide'>
             <div class="row">
                 <div class="col-md-4">
                     <h3 class="block-text"> Lorem Ipsum </h3>
@@ -51,14 +50,14 @@
                 </div>
             </div>
         </div>
-        <div class='content-second'>
+        <div class='content-second slide'>
             <div class="row">
                 <div class="col-md-12">
                     <h3 class="content-second-text"> "Lorem ipsum <strong>dolor </strong> sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut <strong>labore       </strong> et dolore" </h3>
                 </div>
             </div>
         </div>
-        <div class='content-third'>
+        <div class='content-third slide'>
             <div class="row">
                 <div class="col-md-4">
                     <img src="http://i.imgur.com/tv4li8t.png">
