changed text size

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
     </head>
     <body>
         <!-- navbar begin -->
-        <header>
+       
+        <div class="hero-container">
+         <header>
             <nav>
                 <ul>
                     <li class="home"><a href="#">Home</a>
                     </li>
-                    <li class="tutorials"><a class="active" href="#">About Us</a>
+                    <li class="tutorials"><a class="active" href="#">About</a>
                     </li>
                     <li class="about"><a href="#">Location</a>
                     </li>
@@ -23,7 +25,6 @@
                 </ul>
             </nav>
         </header>
-        <div class="hero-container">
             <div class='hero-image'>
                 <div class="layer-background">
                 </div>
