changed links to navigate page

--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     </head>
     <body>
+    <A NAME="home"></A>
         <!-- navbar begin -->
        
         <div class="hero-container">
+        <A NAME="home"></A>
          <header>
             <nav>
                 <ul>
-                    <li class="home"><a href="#">Home</a>
+                    <li class="home"><a href="#home">Home</a>
                     </li>
-                    <li class="tutorials"><a class="active" href="#">About</a>
+                    <li class="about"><a class="active" href="#about">About</a>
                     </li>
-                    <li class="about"><a href="#">Location</a>
+                    <li class="locations"><a href="#location">Location</a>
                     </li>
-                    <li class="contact"><a href="#">Contact</a>
+                    <li class="contact"><a href="#contact">Contact</a>
                     </li>
                 </ul>
             </nav>
@@ -36,6 +38,7 @@
             <p>Non-Destructive Testing</p>
         </div>
         <div class='content-first slide'>
+        <A NAME="about"></A>
             <div class="row">
                 <div class="col-md-4">
                     <h3 class="block-text"> Lorem Ipsum </h3>
@@ -59,6 +62,7 @@
             </div>
         </div>
         <div class='content-third slide'>
+        <A NAME="location"></A>
             <div class="row">
                 <div class="col-md-4">
                     <img src="http://i.imgur.com/tv4li8t.png">
@@ -74,6 +78,7 @@
             </div>
         </div>
         <footer class="footer-distributed">
+        <A NAME="contact"></A>
             <div class="footer-left">
                 <h3>Jace Energy<span></span></h3>
                 <p class="footer-links">
