--- a/index.html
+++ b/index.html
@@ -39,6 +39,33 @@
         </div>
         <div class='content-first slide'>
         <A NAME="about"></A>
+        <div class="headline-row">
+                <div class="col-md-12">
+                    <h3 class="block-text"> Lorem Ipsum </h3>
+                    <p> In indoctum evertitur instructior sit, cu sed explicari maiestatis </p>
+                </div>
+                </div>
+         <div class="icon-row">
+             <div class="col-md-4">
+                <span class="fa-stack fa-4x">
+                    <i class="fa fa-circle fa-stack-2x icon-background"></i>
+                    <i class="fa fa-line-chart fa-stack-1x"></i>
+                </span>
+            </div>
+            <div class="col-md-4">
+                     <span class="fa-stack fa-4x">
+                    <i class="fa fa-circle fa-stack-2x icon-background"></i>
+                    <i class="fa fa-users fa-stack-1x"></i>
+                </span>
+            </div>
+                 <div class="col-md-4">
+                     <span class="fa-stack fa-4x">
+                     <i class="fa fa-circle fa-stack-2x icon-background"></i>
+                    <i class="fa fa-cogs fa-stack-1x"></i>
+                    </span>    
+                 </div>
+                 </div>
+
             <div class="row">
                 <div class="col-md-4">
                     <h3 class="block-text"> Lorem Ipsum </h3>
