--- a/index.html
+++ b/index.html
@@ -39,43 +39,48 @@
         </div>
         <div class='content-first slide'>
         <A NAME="about"></A>
+            
         <div class="headline-row">
                 <div class="col-md-12">
                     <h3 class="block-text"> Lorem Ipsum </h3>
+                    <hr>
                     <p> In indoctum evertitur instructior sit, cu sed explicari maiestatis </p>
                 </div>
                 </div>
-         <div class="icon-row">
-             <div class="col-md-4">
-                <span class="fa-stack fa-4x">
-                    <i class="fa fa-circle fa-stack-2x icon-background"></i>
-                    <i class="fa fa-line-chart fa-stack-1x"></i>
-                </span>
-            </div>
-            <div class="col-md-4">
-                     <span class="fa-stack fa-4x">
+            <div class="row">
+                <div class="col-md-4">
+                <center>
+                <div class="icon-first-stack">
+                 <span class="fa-stack fa-2x">
                     <i class="fa fa-circle fa-stack-2x icon-background"></i>
                     <i class="fa fa-users fa-stack-1x"></i>
                 </span>
-            </div>
-                 <div class="col-md-4">
-                     <span class="fa-stack fa-4x">
-                     <i class="fa fa-circle fa-stack-2x icon-background"></i>
-                    <i class="fa fa-cogs fa-stack-1x"></i>
-                    </span>    
-                 </div>
-                 </div>
-
-            <div class="row">
-                <div class="col-md-4">
+                </div>
+                </center>
                     <h3 class="block-text"> Lorem Ipsum </h3>
                     <p>Lorem ipsum dolor sit amet, qui graece minimum pertinacia ne. At mei feugiat senserit. In indoctum evertitur instructior sit, cu sed explicari maiestatis, nec an vero ullum similique. Usu dicat tollit putent an, nec eirmod appareat referrentur in. Nec hendrerit constituam an. </p>
                 </div>
                 <div class="col-md-4">
+                <center>
+                <div class="icon-first-stack">
+                 <span class="fa-stack fa-2x">
+                    <i class="fa fa-circle fa-stack-2x icon-background"></i>
+                    <i class="fa fa-line-chart fa-stack-1x"></i>
+                </span>
+                </div>
+                </center>
                     <h3 class="block-text"> Dolor Sit </h3>
                     <p>Lorem ipsum dolor sit amet, qui graece minimum pertinacia ne. At mei feugiat senserit. In indoctum evertitur instructior sit, cu sed explicari maiestatis, nec an vero ullum similique. Usu dicat tollit putent an, nec eirmod appareat referrentur in. Nec hendrerit constituam an. </p>
                 </div>
                 <div class="col-md-4">
+                <center>
+                <div class="icon-first-stack">
+                 <span class="fa-stack fa-2x">
+                    <i class="fa fa-circle fa-stack-2x icon-background"></i>
+                    <i class="fa fa-cogs fa-stack-1x"></i>
+                </span>
+                </div>
+                </center>
                     <h3 class="block-text"> Graece Minimum </h3>
                     <p> Lorem ipsum dolor sit amet, qui graece minimum pertinacia ne. At mei feugiat senserit. In indoctum evertitur instructior sit, cu sed explicari maiestatis, nec an vero ullum similique. Usu dicat tollit putent an, nec eirmod appareat referrentur in. Nec hendrerit constituam an. </p>
                 </div>
