--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     </head>
     <body>
-    <A NAME="home"></A>
-        <!-- navbar  begin -->
-       
-        <div class="hero-container">
         <A NAME="home"></A>
-         <header>
-            <nav>
-                <ul>
-                    <li class="home"><a href="#home">Home</a>
-                    </li>
-                    <li class="about"><a class="active" href="#about">About</a>
-                    </li>
-                    <li class="locations"><a href="#location">Location</a>
-                    </li>
-                    <li class="contact"><a href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
+        <!-- navbar  begin -->
+
+        <div class="hero-container">
+            <A NAME="home"></A>
+            <header>
+                <nav>
+                    <ul>
+                        <li class="home"><a href="#home">Home</a>
+                        </li>
+                        <li class="about"><a class="active" href="#about">About</a>
+                        </li>
+                        <li class="locations"><a href="#location">Location</a>
+                        </li>
+                        <li class="contact"><a href="#contact">Contact</a>
+                        </li>
+                    </ul>
+                </nav>
+            </header>
             <div class='hero-image'>
                 <div class="layer-background">
                 </div>
@@ -38,49 +38,49 @@
             <p>Non-Destructive Testing</p>
         </div>
         <div class='content-first slide'>
-        <A NAME="about"></A>
-            
-        <div class="headline-row">
+            <A NAME="about"></A>
+
+            <div class="headline-row">
                 <div class="col-md-12">
                     <h3 class="block-text"> Lorem Ipsum </h3>
                     <hr>
                     <p> In indoctum evertitur instructior sit, cu sed explicari maiestatis </p>
                 </div>
-                </div>
+            </div>
             <div class="row">
                 <div class="col-md-4">
-                <center>
-                <div class="icon-first-stack">
-                 <span class="fa-stack fa-2x">
-                    <i class="fa fa-circle fa-stack-2x icon-background"></i>
-                    <i class="fa fa-users fa-stack-1x"></i>
-                </span>
-                </div>
-                </center>
+                    <center>
+                    <div class="icon-first-stack">
+                        <span class="fa-stack fa-2x">
+                        <i class="fa fa-circle fa-stack-2x icon-background"></i>
+                        <i class="fa fa-users fa-stack-1x"></i>
+                        </span>
+                    </div>
+                    </center>
                     <h3 class="block-text"> Lorem Ipsum </h3>
                     <p>Lorem ipsum dolor sit amet, qui graece minimum pertinacia ne. At mei feugiat senserit. In indoctum evertitur instructior sit, cu sed explicari maiestatis, nec an vero ullum similique. Usu dicat tollit putent an, nec eirmod appareat referrentur in. Nec hendrerit constituam an. </p>
                 </div>
                 <div class="col-md-4">
-                <center>
-                <div class="icon-first-stack">
-                 <span class="fa-stack fa-2x">
-                    <i class="fa fa-circle fa-stack-2x icon-background"></i>
-                    <i class="fa fa-line-chart fa-stack-1x"></i>
-                </span>
-                </div>
-                </center>
+                    <center>
+                    <div class="icon-first-stack">
+                        <span class="fa-stack fa-2x">
+                        <i class="fa fa-circle fa-stack-2x icon-background"></i>
+                        <i class="fa fa-line-chart fa-stack-1x"></i>
+                        </span>
+                    </div>
+                    </center>
                     <h3 class="block-text"> Dolor Sit </h3>
                     <p>Lorem ipsum dolor sit amet, qui graece minimum pertinacia ne. At mei feugiat senserit. In indoctum evertitur instructior sit, cu sed explicari maiestatis, nec an vero ullum similique. Usu dicat tollit putent an, nec eirmod appareat referrentur in. Nec hendrerit constituam an. </p>
                 </div>
                 <div class="col-md-4">
-                <center>
-                <div class="icon-first-stack">
-                 <span class="fa-stack fa-2x">
-                    <i class="fa fa-circle fa-stack-2x icon-background"></i>
-                    <i class="fa fa-cogs fa-stack-1x"></i>
-                </span>
-                </div>
-                </center>
+                    <center>
+                    <div class="icon-first-stack">
+                        <span class="fa-stack fa-2x">
+                        <i class="fa fa-circle fa-stack-2x icon-background"></i>
+                        <i class="fa fa-cogs fa-stack-1x"></i>
+                        </span>
+                    </div>
+                    </center>
                     <h3 class="block-text"> Graece Minimum </h3>
                     <p> Lorem ipsum dolor sit amet, qui graece minimum pertinacia ne. At mei feugiat senserit. In indoctum evertitur instructior sit, cu sed explicari maiestatis, nec an vero ullum similique. Usu dicat tollit putent an, nec eirmod appareat referrentur in. Nec hendrerit constituam an. </p>
                 </div>
@@ -94,7 +94,7 @@
             </div>
         </div>
         <div class='content-third slide'>
-        <A NAME="location"></A>
+            <A NAME="location"></A>
             <div class="row">
                 <div class="col-md-4">
                     <img src="http://i.imgur.com/tv4li8t.png">
@@ -110,7 +110,7 @@
             </div>
         </div>
         <footer class="footer-distributed">
-        <A NAME="contact"></A>
+            <A NAME="contact"></A>
             <div class="footer-left">
                 <h3>Jace Energy<span></span></h3>
                 <p class="footer-links">
@@ -122,17 +122,23 @@
             </div>
             <div class="footer-center">
                 <div>
-                    <i class="fa fa-map-marker"></i>
-                    <p><span>1234 Business Street</span> Edmonton, Alberta</p>
+                    <div class="centered-icons">
+                        <i class="fa fa-map-marker"></i>
+                        <p><span>1234 Business Street</span> Edmonton, Alberta</p>
+                    </div>
                 </div>
                 <div>
-                    <i class="fa fa-phone"></i>
-                    <p>(780)235-3991</p>
+                    <div class="centered-icons">
+                        <i class="fa fa-phone"></i>
+                        <p>(780)235-3991</p>
+                    </div>
                 </div>
                 <div>
-                    <i class="fa fa-envelope"></i>
-                    <p><a href="mailto:info@jace-energy.com">info@jace-energy.com</a>
-                    </p>
+                    <div class="centered-icons">
+                        <i class="fa fa-envelope"></i>
+                        <p><a href="mailto:info@jace-energy.com">info@jace-energy.com</a>
+                        </p>
+                    </div>
                 </div>
             </div>
             <div class="footer-right">
@@ -143,7 +149,6 @@
                     <a href="#"><i class="fa fa-facebook"></i></a>
                     <a href="#"><i class="fa fa-twitter"></i></a>
                     <a href="#"><i class="fa fa-linkedin"></i></a>
-                    <a href="#"><i class="fa fa-github"></i></a>
                 </div>
             </div>
         </footer>
